# Logger

./: .gitignore  CMakeLists.txt  README.md  run.bat
LoggerApp/: CMakeLists.txt  LoggerApp.cpp  LoggerApp.vcxproj  LoggerApp.vcxproj.filters  cmake_install.cmake
LoggerLib/: CMakeLists.txt  LoggerLib.cpp  LoggerLib.h  LoggerLib.vcxproj  LoggerLib.vcxproj.filters  cmake_install.cmake
